--- a/webhm.html
+++ b/webhm.html
@@ -51,7 +51,7 @@
             outline: greenyellow;
         }
     </style>
-    <body style="background-color: rgb(218, 91, 7);">
+    <body style="background-color: rgb(165, 159, 155);">
         <div class="shero">
             <div class="navbar" style="align-items: center; display: flex; margin: 30px auto;">
                 <img src="logosn.png" style="height: 100px; width: 80px;">
@@ -75,16 +75,17 @@
                         </div>
                         <h1 style="font-size: 50px; font-family: 'Times New Roman', Times, serif;">BINO AIRJORDAN CORNER</h1>
                         <h3><i>Imagine looking classic with us!</i></h3>
-                        <i>"Welcome to BINO AIRJORDAN CORNER, your destination for stylish and affordable sneakers! 🚀 Step into the world of footwear fashion with us and discover a diverse collection of trendy kicks that won't break the bank. From classic essentials to the latest sneaker trends, we've got your feet covered. Quality meets affordability at [Shop Name], 
+                        <i>"Welcome to BINO AIRJORDAN CORNER,<br> your destination for stylish and affordable sneakers! 🚀 Step into the world of footwear fashion with us and discover a diverse collection of trendy kicks that won't break the bank. From classic essentials to the latest sneaker trends, 
+                            we've got your feet covered. Quality meets affordability at [Shop Name], 
             where comfort and style unite. Find your perfect pair today!"</i>
                      </div>
                      <div class="right-column" style="height: fit-content;">
-                        <img src="sneakers.jpg" style="height: 500px;" >
+                        <img src="sneakers.jpg" style="height: 500px; margin-inline: auto; border-radius: 3rem 3rem 3rem;padding: 1.25rem; background-color: #6c281c;" >
                      </div>
                 
             </div>
         </div>
-        <footer style="background-color: rgb(225, 108, 19); height: 300px;">
+        <footer style="background-color: rgb(39, 31, 25); height: 300px; color: aliceblue;">
             
         <div class="col-lg-3 col-md-6 footer-links">
             <h3>BINO AIRJORDAN CORNER</h3>
@@ -96,11 +97,11 @@
         <div class="col-lg-3 col-md-6 footer-links">
             <h4>Our Services</h4>
             <ul >
-              <li><i class="bx bx-chevron-right" ></i> <a href="#" style="color: #000;">Selling Shoes</a></li>
-              <li><i class="bx bx-chevron-right" ></i> <a href="#" style="color: #000;">Shoeshine</a></li>
-              <li><i class="bx bx-chevron-right" ></i> <a href="#" style="color: #000;">Feet Accessories</a></li>
-              <li><i class="bx bx-chevron-right" ></i> <a href="#" style="color: #000;">Marketing</a></li>
-              <li ><i class="bx bx-chevron-right" ></i> <a href="#" style="color: #000;">Home decorations</a></li>
+              <li><i class="bx bx-chevron-right" ></i> <a href="#" style="color: #faf5f5;">Selling Shoes</a></li>
+              <li><i class="bx bx-chevron-right" ></i> <a href="#" style="color: #faf5f5;">Shoeshine</a></li>
+              <li><i class="bx bx-chevron-right" ></i> <a href="#" style="color:#faf5f5;">Feet Accessories</a></li>
+              <li><i class="bx bx-chevron-right" ></i> <a href="#" style="color: #faf5f5;">Marketing</a></li>
+              <li ><i class="bx bx-chevron-right" ></i> <a href="#" style="color: #faf5f5;">Home decorations</a></li>
             </ul>
           </div>
           <div class="container py-4" style="text-align: center;">
