--- a/webhm.html
+++ b/webhm.html
@@ -56,14 +56,14 @@
             font-size: 50px;
         }
     </style>
-    <body style="background-color: rgb(165, 159, 155);">
+    <body style="background-color: rgb(165, 159, 155); background-image: url(sneak3.jpg); background-attachment: fixed;background-size: cover;">
         <div class="shero">
             <div class="navbar" style="align-items: center; display: flex; margin: 30px auto;">
                 <img src="logosn.png" style="height: 100px; width: 80px;">
                 <ul style=" list-style: none; flex: 1; text-align: right;">
-                    <li style="display: inline-block; margin: 0 25px;"><a href="#" style="color: #000; padding: 0 10px; position: relative; text-decoration: none;">Home</a></li>
-                    <li style="display: inline-block; margin: 0 25px;"><a href="#" style="color: #000; padding: 0 10px; position: relative; text-decoration: none;">About</a></li>
-                    <li style="display: inline-block; margin: 0 25px;"><a href="#" style="color: #000; padding: 0 10px; position: relative; text-decoration: none;">Contact</a></li>
+                    <li style="display: inline-block; margin: 0 25px;"><a href="#" style="color: #fff; padding: 0 10px; position: relative; text-decoration: none;">Home</a></li>
+                    <li style="display: inline-block; margin: 0 25px;"><a href="#" style="color: #fff; padding: 0 10px; position: relative; text-decoration: none;">About</a></li>
+                    <li style="display: inline-block; margin: 0 25px;"><a href="#" style="color: #fff; padding: 0 10px; position: relative; text-decoration: none;">Contact</a></li>
                 </ul>
                 <div class="navbar-icons" style="margin-left: 40px;">
                     <img src="bellicon.png">
