--- a/webhm.html
+++ b/webhm.html
@@ -51,19 +51,21 @@
             margin: 10px 0px 30px;
             outline: greenyellow;
         }
-        .button-shop{
+        button{
             color: rgb(16, 31, 44);
             font-size: 50px;
+            background-color: #6c281c;
+            border-radius: 2rem;
         }
     </style>
     <body style="background-color: rgb(165, 159, 155); background-image: url(sneak3.jpg); background-attachment: fixed;background-size: cover;">
         <div class="shero">
-            <div class="navbar" style="align-items: center; display: flex; margin: 30px auto;">
+            <div class="navbar" style="align-items: center; height: 80px; display: flex; margin: 30px auto; background-color: aliceblue;">
                 <img src="logosn.png" style="height: 100px; width: 80px;">
                 <ul style=" list-style: none; flex: 1; text-align: right;">
-                    <li style="display: inline-block; margin: 0 25px;"><a href="#" style="color: #fff; padding: 0 10px; position: relative; text-decoration: none;">Home</a></li>
-                    <li style="display: inline-block; margin: 0 25px;"><a href="#" style="color: #fff; padding: 0 10px; position: relative; text-decoration: none;">About</a></li>
-                    <li style="display: inline-block; margin: 0 25px;"><a href="#" style="color: #fff; padding: 0 10px; position: relative; text-decoration: none;">Contact</a></li>
+                    <li style="display: inline-block; margin: 0 25px;"><a href="#" style="color: #000; padding: 0 10px; position: relative; text-decoration: none;">Home</a></li>
+                    <li style="display: inline-block; margin: 0 25px;"><a href="#" style="color: #000; padding: 0 10px; position: relative; text-decoration: none;">About</a></li>
+                    <li style="display: inline-block; margin: 0 25px;"><a href="#" style="color: #000; padding: 0 10px; position: relative; text-decoration: none;">Contact</a></li>
                 </ul>
                 <div class="navbar-icons" style="margin-left: 40px;">
                     <img src="bellicon.png">
@@ -75,14 +77,14 @@
                  
                      <div class="left-column">
                         <div class="search-box">
-                            <img src="searchicon.png" style="height: 60px; width: 70px;">
-                            <input type="text">
+                            <img src="searchicon.png" style="height: 60px; width: 70px; ">
+                            <input type="text" style="border-radius: 9rem; width: 400px;background-color: #e2c9c5;">
                         </div>
                         <h1 style="font-size: 50px; font-family: 'Times New Roman', Times, serif;">BINO AIRJORDAN CORNER</h1>
-                        <h3><i>Imagine looking classic with us!</i></h3>
-                        <i>"Welcome to BINO AIRJORDAN CORNER,<br> your destination for stylish and affordable sneakers! 🚀 Step into the world of footwear fashion with us and discover a diverse collection of trendy kicks that won't break the bank. From classic essentials to the latest sneaker trends, 
-                            we've got your feet covered. Quality meets affordability at [Shop Name], 
-                            where comfort and style unite. Find your perfect pair today!"</i>
+                        <h3 style="font-size: 15px; color: aliceblue;"><i>Imagine looking classic with us!</i></h3>
+                        <p style="font-size: 25px; color: aliceblue;"><i>"Welcome to BINO AIRJORDAN CORNER,<br> your destination for stylish and affordable sneakers! 🚀 Step into the world of footwear fashion with us and discover a diverse collection of trendy kicks that won't break the bank. From classic essentials to the latest sneaker trends, 
+                            we've got your feet covered. Quality meets affordability at <b>BINO AIRJORDAN CORNER</b>, 
+                            where comfort and style unite. Find your perfect pair today!"</i></p>
                      </div>
                      <div class="right-column" style="height: fit-content;">
                         <img src="sneakers.jpg" style="height: 500px; margin-inline: auto; border-radius: 3rem 3rem 3rem;padding: 1.25rem; background-color: #6c281c;" >
