--- a/webhm.html
+++ b/webhm.html
@@ -118,15 +118,31 @@
             Get your best and classic Sneakers outfit from our Store<br>
             
         </div>
-        <div class="col-lg-3 col-md-6 footer-links">
-            <h4>Our Services</h4>
-            <ul >
-              <li><i class="bx bx-chevron-right" ></i> <a href="#" style="color: #faf5f5;">Selling Shoes</a></li>
-              <li><i class="bx bx-chevron-right" ></i> <a href="#" style="color: #faf5f5;">Shoeshine</a></li>
-              <li><i class="bx bx-chevron-right" ></i> <a href="#" style="color:#faf5f5;">Feet Accessories</a></li>
-              <li><i class="bx bx-chevron-right" ></i> <a href="#" style="color: #faf5f5;">Marketing</a></li>
-              <li ><i class="bx bx-chevron-right" ></i> <a href="#" style="color: #faf5f5;">Home decorations</a></li>
-            </ul>
+        <div class="col-lg-3 col-md-3 footer-links">
+            <table>
+                <tr>
+                    <td>
+                    <h4>Our Services</h4>
+                    <ul >
+                    <li><i class="bx bx-chevron-right" ></i> <a href="#" style="color: #faf5f5;">Selling Shoes</a></li>
+                    <li><i class="bx bx-chevron-right" ></i> <a href="#" style="color: #faf5f5;">Shoeshine</a></li>
+                    <li><i class="bx bx-chevron-right" ></i> <a href="#" style="color:#faf5f5;">Feet Accessories</a></li>
+                    <li><i class="bx bx-chevron-right" ></i> <a href="#" style="color: #faf5f5;">Marketing</a></li>
+                    <li ><i class="bx bx-chevron-right" ></i> <a href="#" style="color: #faf5f5;">Home decorations</a></li>
+                    </ul>
+                    </td>
+                    <td>
+                        <h4>Contacts</h4>
+                        <ul >
+                        <li><i class="bx bx-chevron-right" ></i> <a href="#" style="color: #faf5f5;">Customer Care</a></li>
+                        <li><i class="bx bx-chevron-right" ></i> <a href="#" style="color: #faf5f5;">Manager</a></li>
+                        <li><i class="bx bx-chevron-right" ></i> <a href="#" style="color:#faf5f5;">Supervisor</a></li>
+                        <li><i class="bx bx-chevron-right" ></i> <a href="#" style="color: #faf5f5;">Planner</a></li>
+                        <li ><i class="bx bx-chevron-right" ></i> <a href="#" style="color: #faf5f5;">Assistant</a></li>
+                        </ul>
+                        </td>
+                </tr>
+            </table>
           </div>
           <div class="container py-4" style="text-align: center;">
             <div class="copyright">
