--- a/NewWorldOfCrochet.html
+++ b/NewWorldOfCrochet.html
@@ -6,6 +6,12 @@
         <link href="nwc.css" rel="stylesheet">
     </head>
     <body>
+        <nav style="text-align: right; text-decoration: wavy; color: #7383c2; align-content: flex-end; font-size: small; overflow: hidden;">
+            <a href="https:wwwww">HOME</a>| |
+            <a href="https:gfjhkn">ABOUT US</a>| |
+            <a href="https:hhhhhh">OUR TEAM</a>| |
+            <a href="hhtp:bbbbb">CONTACT US</a>| |
+        </nav>
         <h1>NEW WORLD OF CROCHET</h1>
         <script src="effects.js"></script>
         <table style="border: solid;">
