--- a/djmbests.html
+++ b/djmbests.html
@@ -5,6 +5,20 @@
     <meta name="viewport" content="width-device-width, initial-scale=1.0"> 
     <title>DJM BESTS</title>
     <link rel="stylesheet" href="djmbests.css">
+        <style>
+          *{
+            margin: 0px; padding: 0px;
+          }
+          .container{
+            background: #006381;
+            background-image: url('womantie.jpg'),url('womantie.jpg'), url('womantie.jpg') ;
+             animation: snow 20s linear infinite;
+          }
+          @keyframes snow{
+            0%{ background-position: 0px 0px,0px 0px,0px 0px;}
+            100%{background-position: 500px 1000px, 400px 400px, 300px 300px;}
+          }
+        </style>
   </head>
   <body>
     <div class="container">
